--- a/index-txt.html
+++ b/index-txt.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 + CSS3 Course</title>
-    <link rel="stylesheet" type="text/css" href="../_css/Style.css" />
+    <link rel="stylesheet" type="text/css" href="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_css/Style.css" />
 </head>
-<script src="../_javascript/Script.js"></script>
+<script src="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_javascript/Script.js"></script>
 
 <body>
     <div id="interface">
@@ -18,24 +18,24 @@
                 <h2 id="h2">A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img src="../_imagens/glass-oculos-preto-peq.png" id="icon">
+            <img src="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png" id="icon">
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="change_picture('../_imagens/home.png')"
-                        onmouseout="change_picture('../_imagens/glass-oculos-preto-peq.png')"><a
+                    <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/home.png')"
+                        onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
                             href="index-txt.html">Home</a></li>
-                    <li onmouseover="change_picture('../_imagens/especificacoes.png')"
-                        onmouseout="change_picture('../_imagens/glass-oculos-preto-peq.png')"><a
+                    <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/especificacoes.png')"
+                        onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
                             href="specs-txt.html">Especificações</a></li>
-                    <li onmouseover="change_picture('../_imagens/fotos.png')"
-                        onmouseout="change_picture('../_imagens/glass-oculos-preto-peq.png')"><a
+                    <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/fotos.png')"
+                        onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
                             href="fotos-txt.html">Fotos</a></li>
-                    <li onmouseover="change_picture('../_imagens/multimidia.png')"
-                        onmouseout="change_picture('../_imagens/glass-oculos-preto-peq.png')"><a
+                    <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/multimidia.png')"
+                        onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
                             href="multimidia-txt.html">Multimídia</a></li>
-                    <li onmouseover="change_picture('../_imagens/contato.png')"
-                        onmouseout="change_picture('../_imagens/glass-oculos-preto-peq.png')"><a
+                    <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/contato.png')"
+                        onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
                             href="fale-conosco-txt.html">Fale conosco</a></li>
                     </ol>
             </nav>
@@ -65,7 +65,7 @@
                     novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
                 <figure id="ft" class="ft">
-                    <img src="../_imagens/glass-quadro-homem-mulher.jpg">
+                    <img src="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-quadro-homem-mulher.jpg">
                     <figcaption>
                         <h3>Google Glass</h3>
                         <p>Uma nova maneira de ver o mundo!</p>
@@ -118,8 +118,8 @@
                     “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
                 <h1 id="vid"><video id="Movie00" controls="controls"
-                        src="../../../curso-html5-pacote02/_media/one-day.mp4"
-                        poster="../_imagens/video-mini01.jpg"></video></h1>
+                        src="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote02/_media/one-day.mp4"
+                        poster="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/video-mini01.jpg"></video></h1>
 
             </article>
 
@@ -129,8 +129,8 @@
 
             <h1>Outras Notícias</h1>
             <h2>Vídeo mais recente<br><video id="Movie01" controls="controls"
-                    src="../../../curso-html5-pacote02/_media/how-it-feels.mp4"
-                    poster="../_imagens/video-mini02.jpg"></video></h2><br>
+                    src="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote02/_media/getting-started.mp4"
+                    poster="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/video-mini02.jpg"></video></h2><br>
 
             <h2>Novidades no Glass</h2>
             <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita
