--- a/Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_textos/fale-conosco-txt.html
+++ b/Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_textos/fale-conosco-txt.html
@@ -25,7 +25,7 @@
                 <h1>Menu Principal</h1>
                 <ul>
                     <li onmouseover="change_picture('../_imagens/home.png')"
-                        onmouseout="change_picture('../_imagens/contato.png')"><a href="index-txt.html">Home</a></li>
+                        onmouseout="change_picture('../_imagens/contato.png')"><a href="../../../../../index-txt.html">Home</a></li>
                     <li onmouseover="change_picture('../_imagens/especificacoes.png')"
                         onmouseout="change_picture('../_imagens/contato.png')"><a
                             href="specs-txt.html">Especificações</a></li>
