--- a/index-txt.html
+++ b/index-txt.html
@@ -27,16 +27,16 @@
                             href="index-txt.html">Home</a></li>
                     <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/especificacoes.png')"
                         onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
-                            href="specs-txt.html">Especificações</a></li>
+                            href="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_textos/specs-txt.html">Especificações</a></li>
                     <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/fotos.png')"
                         onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
-                            href="fotos-txt.html">Fotos</a></li>
+                            href="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_textos/fotos-txt.html">Fotos</a></li>
                     <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/multimidia.png')"
                         onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
-                            href="multimidia-txt.html">Multimídia</a></li>
+                            href="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_textos/multimidia-txt.html">Multimídia</a></li>
                     <li onmouseover="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/contato.png')"
                         onmouseout="change_picture('Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a
-                            href="fale-conosco-txt.html">Fale conosco</a></li>
+                            href="Google-Glass_HTML&CSS/HTML5 + CSS3/curso-html5-pacote01/projeto-glass-html5/_textos/fale-conosco-txt.html">Fale conosco</a></li>
                     </ol>
             </nav>
 
